--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,20 @@
                 <!-- Your list of chats will go here -->
                 <div class="single-chat">Chat 1</div>
                 <div class="single-chat">Chat 2</div>
+                <div class="single-chat">Chat 3</div>
+                <div class="single-chat">Chat 4</div>
+                <div class="single-chat">Chat 5</div>
+                <div class="single-chat">Chat 6</div>
+                <div class="single-chat">Chat 7</div>
+                <div class="single-chat">Chat 8</div>
+                <div class="single-chat">Chat 9</div>
+                <div class="single-chat">Chat 10</div>
+                <div class="single-chat">Chat 11</div>
+                <div class="single-chat">Chat 12</div>
+                <div class="single-chat">Chat 13</div>
+                <div class="single-chat">Chat 14</div>
+                <div class="single-chat">Chat 15</div>
+                <div class="single-chat">Chat 16</div>
                 <!-- ... -->
             </div>
             <div class="profile-content">
@@ -38,6 +52,22 @@
             </div>
         </div>
         <div class="chat-container">
+            <div class="profile-content-mobile">
+                <img src="./images/persona.png" alt="Profile Image" class="profile-image">
+                <div class="profile-name">John Doe</div>
+
+
+                <input type="checkbox" id="hamburgerToggleMobile">
+                <label class="hamburger-menu" for="hamburgerToggleMobile">☰</label>
+
+                <ul class="hamburger-dropdown">
+                    <li><a href="#">Menu Item 1</a></li>
+                    <li><a href="#">Menu Item 2</a></li>
+                    <li><a href="#">Menu Item 3</a></li>
+                    <li><a href="#">Menu Item 4</a></li>
+                    <!-- Add more items as needed -->
+                </ul>
+            </div>
             <div class="chat-messages">
                 <div class="message left">How are you today?</div>
                 <div class="message right">I'm good, thanks for asking!</div>
@@ -58,5 +88,6 @@
         </div>
     </div>
 </body>
+<script src="./js/helper.js" defer></script>
 
 </html>
